# selfpatch_demos

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md
.devcontainer/: Dockerfile  devcontainer.json  (+1 more)
demos/manymove_industrial/: CMakeLists.txt  Dockerfile  README.md  check-demo.sh  docker-compose.yml  package.xml  run-demo.sh  stop-demo.sh
demos/manymove_industrial/config/: manymove_industrial_manifest.yaml  medkit_params.yaml
demos/manymove_industrial/container_scripts/conveyor-line/inject-estop/: metadata.json  script.bash
demos/manymove_industrial/container_scripts/conveyor-line/inject-photoeye-flicker/: metadata.json  script.bash
demos/manymove_industrial/container_scripts/conveyor-line/restore-line/: metadata.json  script.bash
demos/manymove_industrial/container_scripts/manymove-planning/arm-self-test/: metadata.json  script.bash
demos/manymove_industrial/container_scripts/manymove-planning/inject-collision/: metadata.json  script.bash
demos/manymove_industrial/container_scripts/manymove-planning/inject-soft-fault/: metadata.json  script.bash
demos/manymove_industrial/container_scripts/manymove-planning/restore-normal/: metadata.json  script.bash
demos/manymove_industrial/launch/: demo.launch.py
demos/manymove_industrial/opcua_bridge/: Dockerfile  bridge.py
demos/manymove_industrial/plc_sim/: Dockerfile  plc_server.py  requirements.txt
demos/moveit_pick_place/: CMakeLists.txt  Dockerfile  README.md  arm-self-test.sh  check-entities.sh  check-faults.sh  docker-compose.yml  inject-collision.sh  inject-controller-timeout.sh  inject-grasp-failure.sh  inject-joint-limit.sh  inject-planning-failure.sh  move-arm.sh  package.xml  planning-benchmark.sh  restore-normal.sh  run-demo.sh  setup-triggers.sh  stop-demo.sh  watch-triggers.sh
demos/moveit_pick_place/config/: medkit_params.yaml  moveit_controllers.yaml  panda_manifest.yaml  panda_moveit.yaml
demos/moveit_pick_place/container_scripts/moveit-planning/arm-self-test/: metadata.json  script.bash
demos/moveit_pick_place/container_scripts/moveit-planning/inject-collision/: metadata.json  script.bash
demos/moveit_pick_place/container_scripts/moveit-planning/inject-planning-failure/: metadata.json  script.bash
demos/moveit_pick_place/launch/: demo.launch.py  demo_gazebo.launch.py
demos/moveit_pick_place/scripts/: inject-collision.sh  inject-planning-failure.sh  manipulation_monitor.py  pick_place_loop.py  restore-normal.sh
demos/moveit_pick_place/worlds/: factory.sdf
demos/multi_ecu_aggregation/: CMakeLists.txt  Dockerfile  README.md  check-demo.sh  docker-compose.yml  inject-cascade-failure.sh  inject-gripper-jam.sh  inject-planning-delay.sh  inject-sensor-failure.sh  package.xml  restore-normal.sh  run-demo.sh  stop-demo.sh
demos/multi_ecu_aggregation/config/: actuation_manifest.yaml  actuation_params.yaml  perception_manifest.yaml  perception_params.yaml  planning_manifest.yaml  planning_params.yaml
demos/multi_ecu_aggregation/config/domain_bridge/: actuation_bridge.yaml  planning_bridge.yaml
demos/multi_ecu_aggregation/launch/: actuation.launch.py  perception.launch.py  planning.launch.py
demos/multi_ecu_aggregation/src/actuation/: gripper_controller.cpp  joint_driver.cpp  motor_controller.cpp
demos/multi_ecu_aggregation/src/perception/: camera_driver.cpp  lidar_driver.cpp  object_detector.cpp  point_cloud_filter.cpp
demos/multi_ecu_aggregation/src/planning/: behavior_planner.cpp  path_planner.cpp  task_scheduler.cpp
demos/ota_nav2_sensor_fix/ota_update_plugin/: CMakeLists.txt  package.xml
demos/ota_nav2_sensor_fix/ota_update_plugin/src/: catalog_client.cpp  catalog_client.hpp  operation_dispatcher.cpp  operation_dispatcher.hpp  ota_update_plugin.cpp  plugin_exports.cpp  process_runner.cpp  process_runner.hpp
demos/ota_nav2_sensor_fix/ota_update_plugin/test/: test_catalog_client.cpp  test_operation_dispatcher.cpp  test_plugin_smoke.cpp
demos/ota_nav2_sensor_fix/ota_update_server/: Dockerfile  pyproject.toml  pyrightconfig.json
demos/ota_nav2_sensor_fix/ota_update_server/ota_update_server/: main.py
demos/ota_nav2_sensor_fix/ota_update_server/tests/: test_main.py
demos/ota_nav2_sensor_fix/ros2_packages/broken_lidar/: CMakeLists.txt  package.xml
demos/ota_nav2_sensor_fix/ros2_packages/broken_lidar_legacy/: CMakeLists.txt  package.xml
demos/ota_nav2_sensor_fix/ros2_packages/fixed_lidar/: CMakeLists.txt  package.xml
demos/ota_nav2_sensor_fix/ros2_packages/obstacle_classifier_v2/: CMakeLists.txt  package.xml
demos/ota_nav2_sensor_fix/ros2_packages/ota_nav2_sensor_fix_demo/: CMakeLists.txt  package.xml
demos/sensor_diagnostics/: CMakeLists.txt  Dockerfile  README.md  check-demo.sh  docker-compose.yml  inject-drift.sh  inject-failure.sh  inject-fault-scenario.sh  inject-nan.sh  inject-noise.sh  package.xml  restore-normal.sh  run-demo.sh  run-diagnostics.sh  setup-triggers.sh  stop-demo.sh  watch-triggers.sh
demos/sensor_diagnostics/config/: medkit_params.yaml  sensor_manifest.yaml  sensor_params.yaml
demos/sensor_diagnostics/include/sensor_diagnostics/: simulated_sensor_base.hpp
demos/sensor_diagnostics/launch/: demo.launch.py
demos/sensor_diagnostics/src/: anomaly_detector_node.cpp  beacon_helper.cpp  beacon_helper.hpp  camera_sim_node.cpp  gps_sim_node.cpp  imu_sim_node.cpp  lidar_sim_node.cpp
demos/turtlebot3_integration/: CMakeLists.txt  Dockerfile  README.md  check-entities.sh  check-faults.sh  docker-compose.article3.yml  docker-compose.debounce.yml  docker-compose.nvidia.yml  docker-compose.yml  inject-collision.sh  inject-controller-failure.sh  inject-localization-failure.sh  inject-nav-failure.sh  nav-health-check.sh  package.xml  reset-navigation.sh  restore-normal.sh  run-demo-debounce.sh  run-demo.sh  send-nav-goal.sh  setup-triggers.sh  stop-demo.sh  watch-triggers.sh
demos/turtlebot3_integration/config/: medkit_params.yaml  medkit_params_debounce.yaml  nav2_params.yaml  turtlebot3_manifest.yaml
demos/turtlebot3_integration/launch/: demo.launch.py
demos/turtlebot3_integration/scripts/: anomaly_detector.py  fault_storm.py
(+175 files in other folders)
