<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sensor_diagnostics_demo</name>
  <version>0.1.0</version>
  <description>Lightweight sensor diagnostics demo for ros2_medkit (no Gazebo required)</description>
  <maintainer email="demo@example.com">Demo Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>ros2_medkit_msgs</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ros2_medkit_gateway</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
