<?xml version="1.0"?>
<package format="3">
  <name>ota_update_plugin</name>
  <version>0.1.0</version>
  <description>Dev-grade OTA plugin for ros2_medkit gateway: update / install / uninstall via simple HTTP catalog.</description>
  <maintainer email="bartoszburda93@gmail.com">bburda</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ros2_medkit_cmake</depend>
  <depend>ros2_medkit_gateway</depend>
  <depend>nlohmann-json-dev</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
