[project]
name = "ota_update_server"
version = "0.1.0"
description = "Minimal FastAPI artifact host for OTA demo"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "httpx>=0.27",
]

[project.scripts]
ota-update-server = "ota_update_server.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
