<?xml version="1.0"?>
<package format="3">
  <name>broken_lidar</name>
  <version>1.0.0</version>
  <description>Broken lidar node that publishes /scan with a phantom obstacle (demo target of OTA update).</description>
  <maintainer email="bartoszburda93@gmail.com">bburda</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ros2_medkit_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
