<?xml version="1.0"?>
<package format="3">
  <name>fixed_lidar</name>
  <version>2.1.0</version>
  <description>Fixed lidar node that publishes clean /scan.</description>
  <maintainer email="bartoszburda93@gmail.com">bburda</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
