<?xml version="1.0"?>
<package format="3">
  <name>obstacle_classifier_v2</name>
  <version>1.0.0</version>
  <description>Extra safety layer for nav2 (target of install demo scene).</description>
  <maintainer email="bartoszburda93@gmail.com">bburda</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
