<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ota_nav2_sensor_fix_demo</name>
  <version>0.1.0</version>
  <description>Launch + config glue for the OTA over SOVD nav2 sensor-fix demo (TurtleBot3 + Nav2 + headless Gazebo + broken_lidar/fixed_lidar swap).</description>
  <maintainer email="bartoszburda93@gmail.com">bburda</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <exec_depend>turtlebot3_navigation2</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_behaviors</exec_depend>
  <exec_depend>nav2_costmap_2d</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>
  <exec_depend>ros2_medkit_gateway</exec_depend>
  <exec_depend>ros2_medkit_fault_manager</exec_depend>
  <exec_depend>broken_lidar</exec_depend>
  <exec_depend>broken_lidar_legacy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
